--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -14,12 +14,15 @@
         android:layout_height="match_parent" />
 
     <android.support.design.widget.NavigationView
+        android:background="@color/colorPrimaryDark"
         android:id="@+id/nav_view"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
         app:headerLayout="@layout/nav_header_menu"
+        app:itemTextColor="@color/textColorPrimary"
+        app:itemIconTint="@color/colorAccent"
         app:menu="@menu/activity_menu_drawer" />
 
 </android.support.v4.widget.DrawerLayout>
