Dodałem ekran startowy, przechodzenie między ekranem głównym a ekranem rozmowy

--- a/app/src/main/res/layout/nav_header_menu.xml
+++ b/app/src/main/res/layout/nav_header_menu.xml
@@ -16,17 +16,16 @@
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
     <ImageView
-        android:id="@+id/imageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:srcCompat="@mipmap/ic_person" />
+        android:src="@mipmap/ic_person"/>
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Jan Kowalski"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
 
     <TextView
         android:id="@+id/textView"
