--- a/app/src/main/res/layout/accout_login.xml
+++ b/app/src/main/res/layout/accout_login.xml
@@ -1,32 +1,121 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:background="@color/colorAccent"
-              >
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="fill_parent"
+    android:layout_height="match_parent"
+    android:background="@color/colorAccent"
+    android:orientation="vertical"
+    >
 
-    <EditText
-        android:id="@+id/editText3"
+    <ImageView
+        android:id="@+id/imageView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textEmailAddress"/>
+        android:src="@drawable/talker_logo"
+        android:layout_above="@+id/incorrectLogin"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="29dp"
+        android:contentDescription=""
+        tools:ignore="ContentDescription"/>
 
-    <EditText
-        android:id="@+id/editText2"
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/incorrectLogin"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textPassword"/>
+        android:text="@string/incorrectLogin"
+        android:textAlignment="center"
+        android:textColor="@color/warningColor"
+        android:layout_above="@+id/textInputLayout3"
+        android:layout_alignLeft="@+id/textInputLayout3"
+        android:layout_alignStart="@+id/textInputLayout3"
+        android:layout_marginBottom="10dp"
+        android:layout_alignRight="@+id/textInputLayout3"
+        android:layout_alignEnd="@+id/textInputLayout3"/>
+
+    <android.support.design.widget.TextInputLayout
+        android:layout_width="wrap_content"
+        android:textColorHint="@color/textColorPrimary"
+        android:layout_height="wrap_content"
+        android:id="@+id/textInputLayout3"
+        android:layout_above="@+id/textInputLayout2"
+        android:layout_alignLeft="@+id/textInputLayout2"
+        android:layout_alignStart="@+id/textInputLayout2"
+        android:layout_marginBottom="10dp">
+
+        <EditText
+            android:id="@+id/inputLogin"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/inputPassword"
+            android:layout_alignLeft="@+id/inputPassword"
+            android:layout_alignStart="@+id/inputPassword"
+            android:ems="10"
+            android:gravity="center"
+            android:hint="@string/login_placeholder"
+            android:inputType="textEmailAddress"
+            android:textColor="@color/textColorPrimary"
+            android:textColorHint="@color/textColorDarker"
+            android:textSize="@dimen/textSizePrimary"/>
+    </android.support.design.widget.TextInputLayout>
+
+    <android.support.design.widget.TextInputLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColorHint="@color/textColorPrimary"
+        android:id="@+id/textInputLayout2"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true">
+
+        <EditText
+            android:id="@+id/inputPassword"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="@string/password_placeholder"
+            android:inputType="textPassword"
+            android:gravity="center"
+            android:textColor="@color/textColorPrimary"
+            android:textColorHint="@color/textColorDarker"
+            android:textSize="@dimen/textSizePrimary"/>
+    </android.support.design.widget.TextInputLayout>
 
     <Button
-        android:id="@+id/button"
-        android:layout_width="match_parent"
+        android:id="@+id/loginButton"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/colorPrimary"
-        android:textColor="@color/textColorPrimary"
+        android:background="@color/colorPrimaryDark"
         android:onClick="logIn"
         android:text="@string/log_in"
-    />
-</LinearLayout>
+        android:textColor="@color/textColorPrimary"
+        android:layout_below="@+id/textInputLayout2"
+        android:layout_alignLeft="@+id/textInputLayout2"
+        android:layout_alignStart="@+id/textInputLayout2"
+        android:layout_marginTop="17dp"
+        android:layout_alignRight="@+id/textInputLayout2"
+        android:layout_alignEnd="@+id/textInputLayout2"/>
+
+    <TextView
+        android:id="@+id/registerInfo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/textColorPrimary"
+        android:layout_below="@+id/loginButton"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp"
+        android:text="@string/register_info"/>
+
+    <Button
+        android:id="@+id/registerButton"
+        android:layout_width="wrap_content"
+        android:layout_height="16dp"
+        android:background="@color/colorAccent"
+        android:textSize="10sp"
+        android:textColor="#4444aa"
+        android:layout_marginTop="31dp"
+        android:text="@string/register_button"
+        android:layout_below="@+id/loginButton"
+        android:layout_centerHorizontal="true"
+        tools:ignore="SmallSp"/>
+</RelativeLayout>
