--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#222222</color>
-    <color name="colorPrimaryDark">#1a1a1a</color>
-    <color name="colorAccent">#8ac249</color>
+    <color name="colorPrimaryDark">#131824</color>
+    <color name="colorAccent">#00a89d</color>
     <color name="textColorPrimary">#ffffff</color>
+    <color name="textColorDarker">#cccccc</color>
+    <color name="warningColor">#ff0000</color>
 </resources>
