Dodałem podstawowy widok rejestracji

--- a/app/src/main/res/layout/accout_login.xml
+++ b/app/src/main/res/layout/accout_login.xml
@@ -115,6 +115,7 @@
         android:textColor="#4444aa"
         android:layout_marginTop="31dp"
         android:text="@string/register_button"
+        android:onClick="register"
         android:layout_below="@+id/loginButton"
         android:layout_centerHorizontal="true"
         tools:ignore="SmallSp"/>
