--- a/app/src/main/res/layout/content_menu.xml
+++ b/app/src/main/res/layout/content_menu.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -11,39 +11,131 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Imie1 Nazwisko1"
-        android:textSize="20dp"
+        android:text="Harold Surname"
         android:textColor="@color/textColorPrimary"
+        android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.46"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintHorizontal_bias="0.173"
-        app:layout_constraintVertical_bias="0.074"/>
+        app:layout_constraintVertical_bias="0.032"
+        android:id="@+id/textView5"
+        android:layout_marginTop="51dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignLeft="@+id/textView3"
+        android:layout_alignStart="@+id/textView3" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Imie2 Nazwisko2"
-        android:textSize="20dp"
+        android:text="Konrad Sladkowski"
         android:textColor="@color/textColorPrimary"
+        android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintHorizontal_bias="0.173"
-        app:layout_constraintVertical_bias="0.197"/>
+        app:layout_constraintVertical_bias="0.242"
+        android:layout_alignTop="@+id/buttonSladu"
+        android:layout_alignLeft="@+id/textView19"
+        android:layout_alignStart="@+id/textView19"
+        android:id="@+id/textView6" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Imie3 Nazwisko3"
-        android:textSize="20dp"
+        android:text="Kamil Chmielowski"
         android:textColor="@color/textColorPrimary"
+        android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintHorizontal_bias="0.173"
-        app:layout_constraintVertical_bias="0.322"/>
-</android.support.constraint.ConstraintLayout>
+        app:layout_constraintVertical_bias="0.443"
+        android:layout_alignTop="@+id/buttonChmielu"
+        android:layout_alignLeft="@+id/textView19"
+        android:layout_alignStart="@+id/textView19"
+        android:id="@+id/textView8" />
+
+    <Button
+        android:id="@+id/buttonHarold"
+        android:layout_width="81dp"
+        android:layout_height="79dp"
+        android:background="@mipmap/harold01"
+        tools:layout_editor_absoluteX="16dp"
+        tools:layout_editor_absoluteY="16dp"
+        android:onClick="Harold_Prezentacja"
+        android:layout_alignTop="@+id/textView5"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="232dp"
+        android:layout_height="43dp"
+        android:textColor="@color/textColorPrimary"
+
+        android:text="Nie zrobiłem tych zadań, bo są za łatwe xD"
+        tools:layout_editor_absoluteX="110dp"
+        tools:layout_editor_absoluteY="52dp"
+        android:layout_above="@+id/buttonChmielu"
+        android:layout_alignLeft="@+id/textView8"
+        android:layout_alignStart="@+id/textView8" />
+
+
+    <Button
+    android:id="@+id/buttonSladu"
+    android:layout_width="81dp"
+    android:layout_height="79dp"
+    android:background="@mipmap/sladu"
+    tools:layout_editor_absoluteX="16dp"
+    tools:layout_editor_absoluteY="118dp"
+        android:layout_marginTop="45dp"
+        android:layout_below="@+id/buttonChmielu"
+        android:layout_alignLeft="@+id/buttonChmielu"
+        android:layout_alignStart="@+id/buttonChmielu" />
+
+    <TextView
+        android:id="@+id/textView20"
+        android:layout_width="232dp"
+        android:layout_height="43dp"
+        android:textColor="@color/textColorPrimary"
+
+        android:text="Dzisiaj nowa rotacja.\nTrzema tym ChoGallem zagrać"
+        tools:layout_editor_absoluteX="110dp"
+        tools:layout_editor_absoluteY="154dp"
+        android:layout_alignBottom="@+id/buttonSladu"
+        android:layout_alignLeft="@+id/textView6"
+        android:layout_alignStart="@+id/textView6" />
+
+    <Button
+        android:id="@+id/buttonChmielu"
+        android:layout_width="81dp"
+        android:layout_height="79dp"
+        android:background="@mipmap/chmielu"
+        tools:layout_editor_absoluteX="16dp"
+        tools:layout_editor_absoluteY="216dp"
+        android:layout_marginTop="47dp"
+        android:layout_below="@+id/buttonHarold"
+        android:layout_alignLeft="@+id/buttonHarold"
+        android:layout_alignStart="@+id/buttonHarold" />
+
+    <TextView
+        android:id="@+id/textView19"
+        android:layout_width="232dp"
+        android:layout_height="43dp"
+        android:textColor="@color/textColorPrimary"
+
+        android:text="Mam twój indeks, zaniosę go do dziekanatu"
+        tools:layout_editor_absoluteX="110dp"
+        tools:layout_editor_absoluteY="252dp"
+        android:layout_alignBottom="@+id/buttonChmielu"
+        android:layout_toRightOf="@+id/buttonChmielu"
+        android:layout_toEndOf="@+id/buttonChmielu"
+        android:layout_marginLeft="30dp"
+        android:layout_marginStart="30dp" />
+
+
+</RelativeLayout>
