--- a/app/src/main/res/layout/content_menu.xml
+++ b/app/src/main/res/layout/content_menu.xml
@@ -67,9 +67,11 @@
         tools:layout_editor_absoluteX="16dp"
         tools:layout_editor_absoluteY="16dp"
         android:onClick="Harold_Prezentacja"
+        android:layout_marginLeft="27dp"
+        android:layout_marginStart="27dp"
         android:layout_alignTop="@+id/textView5"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"/>
 
     <TextView
         android:id="@+id/textView3"
@@ -82,7 +84,7 @@
         tools:layout_editor_absoluteY="52dp"
         android:layout_above="@+id/buttonChmielu"
         android:layout_alignLeft="@+id/textView8"
-        android:layout_alignStart="@+id/textView8" />
+        android:layout_alignStart="@+id/textView8"/>
 
 
     <Button
@@ -108,7 +110,9 @@
         tools:layout_editor_absoluteY="154dp"
         android:layout_alignBottom="@+id/buttonSladu"
         android:layout_alignLeft="@+id/textView6"
-        android:layout_alignStart="@+id/textView6" />
+        android:layout_alignStart="@+id/textView6"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"/>
 
     <Button
         android:id="@+id/buttonChmielu"
