--- a/app/src/main/res/layout/nav_header_menu.xml
+++ b/app/src/main/res/layout/nav_header_menu.xml
@@ -14,7 +14,6 @@
     <ImageView
         android:layout_width="64sp"
         android:layout_height="64sp"
-        android:src="@mipmap/ic_person"
         android:id="@+id/imageView3"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
@@ -24,7 +23,7 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Jan Kowalski"
+        android:text="Tomek Demczuk"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:layout_above="@+id/textView"
         android:layout_toRightOf="@+id/imageView3"
@@ -36,7 +35,7 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="jan.kowalski@example.com"
+        android:text="tomektomek@gmail.com"
         android:layout_alignBottom="@+id/imageView3"
         android:layout_toRightOf="@+id/imageView3"
         android:layout_toEndOf="@+id/imageView3"
