--- a/app/src/main/res/layout/accout_login.xml
+++ b/app/src/main/res/layout/accout_login.xml
@@ -13,13 +13,11 @@
         android:id="@+id/imageView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:src="@drawable/talker_logo"
+        android:src="@drawable/logo"
+        android:layout_marginBottom="12dp"
         android:layout_above="@+id/incorrectLogin"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="29dp"
-        android:contentDescription=""
-        tools:ignore="ContentDescription"/>
+        android:layout_alignParentStart="true"/>
 
     <TextView
         android:id="@+id/incorrectLogin"
@@ -31,7 +29,6 @@
         android:layout_above="@+id/textInputLayout3"
         android:layout_alignLeft="@+id/textInputLayout3"
         android:layout_alignStart="@+id/textInputLayout3"
-        android:layout_marginBottom="10dp"
         android:layout_alignRight="@+id/textInputLayout3"
         android:layout_alignEnd="@+id/textInputLayout3"/>
 
@@ -91,7 +88,7 @@
         android:id="@+id/loginButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/colorPrimaryDark"
+        android:background="@color/colorPrimary"
         android:onClick="logIn"
         android:text="@string/log_in"
         android:textColor="@color/textColorPrimary"
