Zmieniłem min api lvl na 19(4.4 kitkat) Dodałem perrmision Internet, acces i change Connection state w AndroidManifestanifest.xml  dodałem reakcje na zarejestrowanie się - przesłanie to co w polach jako obiekt na serwer  Działa serializacja i deserializacja  Łączy sie z serwerem, nie zawsze dostaje PONG  Do zorobienia: Opakowac to w jakieś ładne funkcje/klasy  WebSocketami steruje klasa WSocket  User-klasa abstrakcyjna z niej wywodzić sie będą wszystkie klasy User...  UserAdd - klasa której obiektami sa rejestrowani użytkownicy

--- a/app/src/main/res/layout/register_screen.xml
+++ b/app/src/main/res/layout/register_screen.xml
@@ -138,7 +138,8 @@
                 android:background="@color/colorAccent"
                 android:text="@string/register_button"
                 android:textAllCaps="false"
-                android:textColor="@color/textColorPrimary"/>
+                android:textColor="@color/textColorPrimary"
+                android:onClick="tomek_rejestracja"/>
         </RelativeLayout>
     </ScrollView>
 </LinearLayout>
