--- a/app/src/main/res/layout/my_profile_view.xml
+++ b/app/src/main/res/layout/my_profile_view.xml
@@ -1,11 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_height="match_parent"
-    android:layout_width="match_parent"
-    android:background="@color/colorPrimaryDark"
-    android:orientation="vertical">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:orientation="vertical"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:background="@color/colorPrimaryDark">
+
     <include layout="@layout/toolbar"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
+        android:layout_height="wrap_content"
+        android:padding="@dimen/activity_horizontal_margin"
+        android:background="@color/colorPrimary">
+
+        <ImageView
+            android:id="@+id/change_profile_avatar"
+            android:layout_width="@dimen/avatar_size"
+            android:layout_height="@dimen/avatar_size"
+            android:src="@mipmap/ic_person"/>
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/avatar_size"
+            android:text="@string/username_placeholder"
+            android:textColor="@color/textColorPrimary"
+            android:layout_marginStart="@dimen/toast_padding"
+            android:layout_gravity="center"/>
+
+    </LinearLayout>
 
     <ImageView
         android:layout_width="wrap_content"
@@ -36,7 +62,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fillViewport="true"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            >
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -46,7 +73,7 @@
                 android:orientation="vertical">
 
                 <EditText
-                    android:id="@+id/usernameInput"
+                    android:id="@+id/change_profile_usernameInput"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:ems="10"
@@ -59,7 +86,7 @@
                     android:layout_marginTop="@dimen/margin_standard"/>
 
                 <EditText
-                    android:id="@+id/emailInput"
+                    android:id="@+id/change_profile_emailInput"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:ems="10"
@@ -72,7 +99,7 @@
                     android:layout_marginTop="@dimen/margin_standard"/>
 
                 <EditText
-                    android:id="@+id/passwordInput"
+                    android:id="@+id/change_profile_passwordInput"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:ems="10"
@@ -85,7 +112,7 @@
                     android:layout_marginTop="@dimen/margin_standard"/>
 
                 <EditText
-                    android:id="@+id/passwordInput2"
+                    android:id="@+id/change_profile_password_ConfirmInput"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:ems="10"
@@ -99,12 +126,12 @@
                     android:layout_marginTop="@dimen/margin_standard"/>
 
                 <Button
-                    android:id="@+id/registerButton"
+                    android:id="@+id/change_profile_button"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/margin_standard"
                     android:background="@color/colorAccent"
-                    android:text="@string/register_button"
+                    android:text="@string/apply_changes"
                     android:textAllCaps="false"
                     android:textColor="@color/textColorPrimary"/>
             </LinearLayout>
