--- a/app/src/main/res/layout/friends_list_screen.xml
+++ b/app/src/main/res/layout/friends_list_screen.xml
@@ -1,9 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.RecyclerView
-    android:id="@+id/recyclerViewFriends"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:scrollbars="vertical"
-    xmlns:android="http://schemas.android.com/apk/res/android">
-    <!--<include layout="@layout/toolbar"/>-->
-</android.support.v7.widget.RecyclerView>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                android:layout_width="match_parent" android:layout_height="match_parent"
+                android:background="@color/colorPrimary">
+    <include layout="@layout/toolbar"/>
+</RelativeLayout>
