--- a/app/src/main/res/layout/nav_header_menu.xml
+++ b/app/src/main/res/layout/nav_header_menu.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="@dimen/nav_header_height"
     android:background="@color/colorAccent"
@@ -15,31 +14,27 @@
         android:layout_width="64sp"
         android:layout_height="64sp"
         android:id="@+id/imageView3"
+        android:src="@mipmap/ic_person"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"/>
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Tomek Demczuk"
+        android:text="@string/username_placeholder"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:layout_above="@+id/textView"
-        android:layout_toRightOf="@+id/imageView3"
         android:layout_toEndOf="@+id/imageView3"
-        android:layout_marginLeft="11dp"
         android:layout_marginStart="11dp"/>
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="tomektomek@gmail.com"
+        android:text="@string/email_placeholder"
         android:layout_alignBottom="@+id/imageView3"
-        android:layout_toRightOf="@+id/imageView3"
         android:layout_toEndOf="@+id/imageView3"
-        android:layout_marginLeft="26dp"
         android:layout_marginStart="26dp"/>
 
 </RelativeLayout>
