--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,6 @@
     <color name="colorPrimaryDark">#00757a</color>
     <color name="colorAccent">#00a89d</color>
     <color name="textColorPrimary">#ffffff</color>
-    <color name="textColorDarker">#cccccc</color>
+    <color name="textColorDarker">#888888</color>
     <color name="warningColor">#ff0000</color>
 </resources>
