--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,12 @@
 <resources>
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
+    <dimen name="margin_standard">15dp</dimen>
+    <dimen name="margin_logo">50dp</dimen>
+    <dimen name="padding_standard">10dp</dimen>
+    <dimen name="avatar_size">70dp</dimen>
+    <dimen name="toast_height">70dp</dimen>
+    <dimen name="toast_padding">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="nav_header_vertical_spacing">25dp</dimen>
     <dimen name="textSizePrimary">16sp</dimen>
